objects/copado__Copado_Notification__c.object
<CustomObject>
    <description>Used for Copado Notifications using the Streaming API.</description>
    <fields>
        <fullName>copado__AttachmentId__c</fullName>
        <externalId>true</externalId>
        <label>AttachmentId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Message__c</fullName>
        <label>Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Parent2Id__c</fullName>
        <label>Parent2Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__ParentId__c</fullName>
        <label>ParentId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Copado Notification</label>
    <nameField>
        <label>CopadoNotification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Copado Notifications</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>